--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon May 13 2019 04:32:52 GMT+0000 (UTC)  -->
+
 <html data-wf-page="5cd56474107ef24799d3fef0" data-wf-site="5cd56474107ef25997d3feef">
 <head>
   <meta charset="utf-8">
@@ -31,7 +30,7 @@
       <h1 class="heading">Happy employees make better products.</h1>
       <p class="paragraph hero">Easily manage your employees, their requests for holidays and off time and keep track of their awesomeness using timli.</p>
       <div class="form-block w-form">
-        <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" class="form"><input type="email" class="text-field w-input" maxlength="256" name="work-email-top" data-name="work email top" placeholder="Your work email" id="work-email-top" required=""><input type="submit" value="request access" data-wait="Submitting..." class="submit-button w-button"></form>
+        <form id="" name="" data-name="Email Form" class="form"><input type="email" class="text-field w-input" maxlength="256" name="work-email-top" data-name="work email top" placeholder="Your work email" id="work-email-top" required=""><input type="submit" value="request access" data-wait="Submitting..." class="submit-button w-button"></form>
         <div class="success-message w-form-done">
           <div class="text-block-2">Awesome, we&#x27;ll contact you soon!</div>
         </div>
@@ -57,7 +56,7 @@
       <h6 class="heading-3 tag">LIMITED TIME OFFER</h6>
       <p class="paragraph footer">Be one of the first 500 companies to request access and get 12 months for free!</p>
       <div class="form-block w-form">
-        <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" class="form"><input type="email" class="text-field outline w-input" maxlength="256" name="work-email-bottom-2" data-name="Work Email Bottom 2" placeholder="Your work email" id="work-email-bottom-2" required=""><input type="submit" value="request access" data-wait="Submitting..." class="submit-button w-button"></form>
+        <form id="" name="" data-name="Email Form" class="form"><input type="email" class="text-field outline w-input" maxlength="256" name="work-email-bottom-2" data-name="Work Email Bottom 2" placeholder="Your work email" id="work-email-bottom-2" required=""><input type="submit" value="request access" data-wait="Submitting..." class="submit-button w-button"></form>
         <div class="w-form-done">
           <div>Thank you! Your submission has been received!</div>
         </div>
